--- a/public_html/member4.html
+++ b/public_html/member4.html
@@ -9,7 +9,8 @@
     <title>Namn Namnsson</title>
 </head>
 
-<body>
+<body class="profilsidan">
+    <a href="om_oss.html">back</a>
     <!-- Ladda härifrån till Container -->
     <div id="content">
 
