--- a/public_html/om_oss.html
+++ b/public_html/om_oss.html
@@ -30,7 +30,7 @@
                 <h1 class="about-name">Amira</h1>
                 <h2 class="about-info">front-end developer & designer</h2>
                 <div class="about-button">
-                    <a href="member1.html" target="_blank">Read more</a>
+                    <a href="member1.html">Read more</a>
                 </div>
             </div>
             <div class="about-container">
@@ -39,7 +39,7 @@
                 <h1 class="about-name">Edvin</h1>
                 <h2 class="about-info">front-end developer & designer</h2>
                 <div class="about-button">
-                    <a href="member2.html" target="_blank">Read more</a>
+                    <a href="member2.html">Read more</a>
                 </div>
             </div>
             <div class="about-container">
@@ -48,7 +48,7 @@
                 <h1 class="about-name">Emma</h1>
                 <h2 class="about-info">front-end developer & designer</h2>
                 <div class="about-button">
-                    <a href="member3.html" target="_blank">Read more</a>
+                    <a href="member3.html">Read more</a>
                 </div>
             </div>
             <div class="about-container">
@@ -57,7 +57,7 @@
                 <h1 class="about-name">Payam</h1>
                 <h2 class="about-info">front-end developer & designer</h2>
                 <div class="about-button">
-                    <a href="member4.html" target="_blank">Read more</a>
+                    <a href="member4.html">Read more</a>
                 </div>
             </div>
         </div>
