--- a/public_html/member2.html
+++ b/public_html/member2.html
@@ -23,6 +23,7 @@
       </label>
       <div class="nav__menu container" id="nav-menu">
         <ul class="nav__list">
+          <li class="nav__item"><a href="om_oss.html" class="nav__link">Back</a></li>
           <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
           <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
           <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
