länka tillbaka till index från proflem

--- a/public_html/member4.html
+++ b/public_html/member4.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="profilsidan">
-    <a href="om_oss.html">back</a>
+    <a href="index.html">back</a>
     <!-- Ladda härifrån till Container -->
     <div id="content">
 
