--- a/public_html/member3.html
+++ b/public_html/member3.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <a href="om_oss.html">back</a>
+    <a href="index.html">back</a>
     <div class="outer-grid">
         <div class="emma-profile">
             <img class="emma-img" src="bilder/profil/avatar.png" alt="emma">
