--- a/public_html/member1.html
+++ b/public_html/member1.html
@@ -24,7 +24,7 @@
   </head>
   <body>
 
-    <a href="om_oss.html">back</a>
+    <a href="index.html">back</a>
 
     <div class="container">
       <div class="header">
