--- a/public_html/start.html
+++ b/public_html/start.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="initial-scale=1.0">
+  <link rel="stylesheet" href="css/main.css" />
   <title>Grupp 12 Portfolio Start</title>
 </head>
 
@@ -36,6 +37,9 @@
 
 
   </div> <!-- Stänger content -->
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/amira.js"></script>
  
 
 </body>
