--- a/public_html/start.html
+++ b/public_html/start.html
@@ -27,7 +27,7 @@
               elit Ratione voluptate quos ea possimus.</p>
               <br/>
               <div class='random-background'>
-              <h4>Backgroung Options</h4>
+              <h4>Background Options</h4>
               <button class="animationAction" data-background='yes'>Starta </button>
               <button class="animationPause" data-background="No">Stoppa </button>
               </div>
