--- a/public_html/om_oss.html
+++ b/public_html/om_oss.html
@@ -19,9 +19,7 @@
 
         <div class="about-mainext">
             <h1>Hi, we are the members</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere molestias inventore ab, temporibus quod
-                sit earum animi necessitatibus similique at debitis ipsam rerum illum consequatur soluta dolorem sunt
-                dolore. Placeat?</p>
+            <p id="about-our-skills">This is what we can do, we are looking forward to help you with your next projekt!</p>
 
                 <div class="omOssSkill">
                     <div class="skill">
