--- a/public_html/om_oss.html
+++ b/public_html/om_oss.html
@@ -19,7 +19,7 @@
 
         <div class="about-mainext">
             <h1>Hi, we are the members</h1>
-            <p id="about-our-skills">This is what we can do, we are looking forward to help you with your next projekt!</p>
+            <p id="about-our-skills">This is what we do best, we are looking forward to help you with your next projekt!</p>
 
                 <div class="omOssSkill">
                     <div class="skill">
