--- a/public_html/index.html
+++ b/public_html/index.html
@@ -43,7 +43,7 @@
         <ul class="nav__list">
           <li class="nav__item"><a href="start.html" id="startLink" class="nav__link active">Home</a></li>
           <li class="nav__item"><a href="om_oss.html" id="omOssLink" class="nav__link">About</a></li>
-          <li class="nav__item"><a href="projekt.html" id="projektLink" class="nav__link">Skills</a></li>
+          <li class="nav__item"><a href="projekt.html" id="projektLink" class="nav__link">Projects</a></li>
           <li class="nav__item"><a href="kontakt.html" id="kontaktLink" class="nav__link">Contact</a></li>
         </ul>
       </div>
