--- a/public_html/start.html
+++ b/public_html/start.html
@@ -26,7 +26,7 @@
               consectetur adipisicing<br />
               elit Ratione voluptate quos ea possimus.</p>
               <br/>
-              <div class='random-background'>
+              <div>
               <h4>Background Options</h4>
               <button class="animationAction" data-background='yes'>Starta </button>
               <button class="animationPause" data-background="No">Stoppa </button>
