Ändrat om hur sidorna laddas för att kontaktförmuläret ska fungera

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -41,7 +41,7 @@
       </label>
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
-          <li class="nav__item"><a href="start.html" id="startLink" class="nav__link active">Home</a></li>
+          <li class="nav__item"><a href="index.html" id="startLink" class="nav__link active">Home</a></li>
           <li class="nav__item"><a href="om_oss.html" id="omOssLink" class="nav__link">About</a></li>
           <li class="nav__item"><a href="projekt.html" id="projektLink" class="nav__link">Projects</a></li>
           <li class="nav__item"><a href="kontakt.html" id="kontaktLink" class="nav__link">Contact</a></li>
@@ -58,7 +58,23 @@
     <div id="container">
 
       <div id="content">
-
+        <div class="portfolio-sida-a">
+        
+          <div class="introduction-text">
+            <h1>We are <span>Creative</span> group</h1>
+            <p id="p-toggle">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+              voluptate quos <br />ea possimus.Lorem ipsum dolor sit amet
+              consectetur adipisicing<br />
+              elit Ratione voluptate quos ea possimus.</p>
+              <br/>
+              <div>
+              <h4>Background Options</h4>
+              <button class="animationAction" data-background='yes'>Starta </button>
+              <button class="animationPause" data-background="No">Stoppa </button>
+              </div>
+          </div>
+        </div>
       </div>
 
     </div> <!-- stänger container -->
@@ -105,6 +121,7 @@
 
   <script src="js/main.js"></script>
   <script src="js/Amira.js"></script> 
+
 </body>
 
 </html>
