--- a/public_html/start.html
+++ b/public_html/start.html
@@ -4,14 +4,57 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="initial-scale=1.0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.js"></script>
+
+  <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
+
+  <!-- från Amiras amira.html-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <!-- SLUT från Amiras amira.html -->
+
+
+  <!-- från Emmas aboutgrp12.html -->
+  <link rel="stylesheet" href="css/aboutGrp12.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Source+Sans+Pro:wght@300&display=swap"
+    rel="stylesheet">
+  <!-- SLUT från Emmas aboutgrp12.html -->
+
+  <link rel="stylesheet" href="css/main.css" />
 
   <title>Grupp 12 Portfolio Start</title>
 </head>
 
 <body>
 
+  <header class="header-area-a">
+    
+    <nav class="nav">
+      <label class="nav__logo">Grupp 12</label>
+      <label class="nav__toggle" id="nav-toggle"> 
+          <i class='bx bx-menu'></i>
+      </label>
+      <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list">
+          <li class="nav__item"><a href="index.html" id="startLink" class="nav__link">Home</a></li>
+          <li class="nav__item"><a href="om_oss.html" id="omOssLink" class="nav__link">About</a></li>
+          <li class="nav__item"><a href="projekt.html" id="projektLink" class="nav__link">Projects</a></li>
+          <li class="nav__item"><a href="kontakt.html" id="kontaktLink" class="nav__link">Contact</a></li>
+        </ul>
+      </div>
+
+    </nav>
+    
+  </header>
+
   <div id="content">
+
+
 
     <!-- Start lnding page  -->
 
@@ -37,6 +80,17 @@
 
 
   </div> <!-- Stänger content -->
+
+    <!--===== FOOTER =====-->
+    <footer class="footer">
+      <div class="footer__social">
+        <a href="#" class="footer__icon"><i class='bx bxl-facebook'></i></a>
+        <a href="#" class="footer__icon"><i class='bx bxl-instagram'></i></a>
+        <a href="#" class="footer__icon"><i class='bx bxl-twitter'></i></a>
+      </div>
+      <p>&#169; 2021 copyright all right reserved</p>
+    </footer>
+    <!--===== FOOTER =====-->
 
 </body>
 </html>
